wiki-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki-js
  labels:
    name: wiki-js
