wiki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki-js
spec:
  type: ClusterIP
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
