wiki.yml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki-js
spec:
  type: ClusterIP
  selector:
    app: wikijs
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wikijs
  name: wikijs
  namespace: wiki-js
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: requarks/wiki:latest
          ports:
          - containerPort: 3000
            protocol: TCP
