wiki-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: wiki-ingress
  namespace: wiki-js
spec:
  rules:
  - host: wiki.inetninja.com
    http:
      paths:
      - backend:
          service:
            name: wikijs
            port: 
              number: 80
        path: /
        pathType: Prefix
